# Real-time-path-tracing-voxel-blocks

./: .editorconfig  .gitignore  3rdparty.cmake  CMakeLists.txt  README.md  build.bat  buildgame.bat  buildtest.bat  game.bat  imgui.ini  main.cpp  mainOffline.cpp  out.txt  output.txt  run_nvcc.bat  updateCanonical.bat
renderer/: CMakeLists.txt
renderer/animation/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  Skeleton.cpp  Skeleton.h  VertexSkinning.cu  VertexSkinning.h
renderer/assets/: AssetRegistry.cpp  AssetRegistry.h  BlockManager.cpp  BlockManager.h  GLTFUtils.cpp  GLTFUtils.h  MaterialDefinition.h  MaterialManager.cpp  MaterialManager.h  ModelManager.cpp  ModelManager.h  ModelUtils.cpp  ModelUtils.h  ObjUtils.cpp  ObjUtils.h  TextureManager.cu  TextureManager.h  TextureRegistry.cpp  TextureRegistry.h
renderer/core/: Backend.cpp  Backend.h  BufferManager.cpp  BufferManager.h  CameraController.cpp  CameraController.h  Character.cpp  Character.h  CharacterFollowCameraController.cpp  CharacterFollowCameraController.h  DeveloperGUIOverlay.cpp  DeveloperGUIOverlay.h  Entity.cpp  Entity.h  FreeCameraController.cpp  FreeCameraController.h  GameplayCameraController.cpp  GameplayCameraController.h  GlobalSettings.cpp  GlobalSettings.h  InputHandler.cpp  InputHandler.h  MaterialManager.cpp  MaterialManager.h  OfflineBackend.cpp  OfflineBackend.h  OptixRenderer.cpp  OptixRenderer.h  RenderCamera.h  Scene.cpp  Scene.h  SceneConfig.cpp  SceneConfig.h  UI.cpp  UI.h  WorldSceneManager.cpp  WorldSceneManager.h
renderer/denoising/: AntiFirefly.h  Atrous.h  AtrousSmem.h  BilateralFilter.h  BufferCopy.h  ComputeGradients.h  Denoiser.cu  Denoiser.h  DenoiserCommon.h  DenoisingUtils.h  FilterGradients.h  FireflyFilter.h  GenerateConfidence.h  HistoryClamping.h  HistoryFix.h  HitDistReconstruction.h  NoiseVisualization.h  PrePass.h  RelaxMerge.h  SpatialFilter.h  SpatialWideFilter.h  TemporalAccumulation.h  TemporalFilter.h
renderer/ext/stb/: stb_image.h  stb_image_write.h
renderer/postprocessing/: BicubicFilter.h  FilmicToneMapping.h  PostProcessingPipeline.cu  PostProcessingPipeline.h  PostProcessor.cu  PostProcessor.h  ScalingFilter.h  SharpeningFilter.h  Tonemapping.h
renderer/shaders/: AliasTable.cu  AliasTable.h  Bsdf.cu  Bsdf.h  Camera.h  Common.h  HalfPrecision.h  Light.h  LightSample.cu  LinearMath.h  MaterialState.h  OptixShaderCommon.h  RandGen.h  RayGen.cu  Restir.h  RestirCommon.h  RestirHelper.h  Sampler.h  SelfHit.h  ShaderDebugUtils.h  Surface.h  SystemParameter.h  VertexSkinning.cu  VertexSkinning.h  closesthit.cu  miss.cu
renderer/sky/: Sky.cu  Sky.h  SkyData.h
renderer/test/: CMakeLists.txt
renderer/test/aliasTable/: CMakeLists.txt  testAliasTable.cu
renderer/test/camera/: CMakeLists.txt  test.cpp
renderer/util/: BufferUtils.cu  BufferUtils.h  ColorSpace.h  DebugUtils.h  FileUtils.cpp  FileUtils.h  GLTFUtils.cpp  GLTFUtils.h  Gaussian.h  ImageDiff.cpp  ImageDiff.h  KernelHelper.h  LowDiscrepancySequence.h  ModelUtils.cpp  ModelUtils.h  PerformanceTracker.h  RandGenData.h  RandGenHost.cpp  RandGenHost.h  Scan.h  TextureUtils.cpp  TextureUtils.cu  TextureUtils.h  Timer.h
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.h  Backend.cpp  Backend.h  Box.cpp  BufferManager.cpp  BufferManager.h  Camera.cpp  Camera.h  CheckMacros.h  DebugUtils.h  GlobalSettings.h  InputHandler.cpp  InputHandler.h  Logger.h  Material.h  Options.cpp  Options.h  OptixRenderer.cpp  OptixRenderer.h  Parallelogram.cpp  Picture.cpp  Picture.h  PinholeCamera.cpp  PinholeCamera.h  Plane.cpp  Scene.cpp  Scene.h  Settings.h  Sphere.cpp  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Torus.cpp  UI.cpp  UI.h  main.cpp
src/denoising/: Denoiser.cu  Denoiser.h  DenoisingUtils.h  NoiseVisualization.h  SpatialFilter.h  SpatialFilterTranslucentMaterial.h  SpatialWideFilter.h  TemporalFilter.h
src/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw_gl2.cpp  imgui_impl_glfw_gl3.cpp  imgui_internal.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
src/postprocessing/: BicubicFilter.h  PostProcessor.cu  PostProcessor.h  ScalingFilter.h
src/renderer/: CMakeLists.txt
src/renderer/core/: Backend.cpp  Backend.h  BufferManager.cpp  GlobalSettings.h  InputHandler.cpp  InputHandler.h  OptixRenderer.cpp  OptixRenderer.h  RenderCamera.h  Scene.cpp  Scene.h  UI.cpp  UI.h
src/renderer/denoising/: BilateralFilter.h  Denoiser.h  SpatialFilter.h
src/renderer/postprocessing/: BicubicFilter.h  PostProcessor.cu  SharpeningFilter.h  Tonemapping.h
src/renderer/shaders/: Bsdf.cu  Common.h  HalfPrecision.h  LightSample.cu  LinearMath.h  OptixShaderCommon.h  RayGen.cu  Sampler.h  SystemParameter.h  closesthit.cu  miss.cu
src/renderer/sky/: Sky.cu  (+2 more)
src/shaders/: Bsdf.cu  Camera.h  Common.h  HalfPrecision.h  LightSample.cu  LinearMath.h  MathUtils.h  OptixShaderCommon.h  RandGen.h  RayGen.cu  RngUtils.h  Sampler.h  ShaderCommon.h  ShaderDebugUtils.h  SystemParameter.h  app_config.h  bsdf_diffuse_reflection.cu  bsdf_specular_reflection.cu  bsdf_specular_reflection_transmission.cu  closesthit.cu  function_indices.h  light_definition.h  light_sample.cu  material_parameter.h  miss.cu  per_ray_data.h  random_number_generators.h  raygeneration.cu  shader_common.h  system_parameter.h  vector_math.h  vertex_attributes.h
src/test/: CMakeLists.txt  testCommon.h
src/util/: ColorSpace.h  DebugUtils.h  Gaussian.h  KernelHelper.h  LinearMath.h  Picture.cpp  Picture.h  RandGenData.h  RandGenHost.cpp  RandGenHost.h  Scan.h  Texture.cpp  Texture.h  TextureUtils.cpp  TextureUtils.h  Timer.h
src/voxelengine/: BlockMesher.cpp  BlockMesher.h  CMakeLists.txt  Voxel.h  VoxelChunk.h  VoxelEngine.cpp  VoxelEngine.h  VoxelMath.cpp  VoxelMath.h
voxelengine/: Block.h  BlockMesher.cpp  BlockMesher.h  CMakeLists.txt  ChunkGeometryBuffer.cpp  ChunkGeometryBuffer.h  Noise.cpp  Noise.h  Voxel.h  VoxelChunk.h  VoxelEngine.cpp  VoxelEngine.cu  VoxelEngine.h  VoxelMath.cpp  VoxelMath.h  VoxelSceneGen.cu  VoxelSceneGen.h
voxelengine/ext/: PerlinNoise.hpp
(+66 files in other folders)
